--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -3,51 +3,53 @@
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
 
-            <div class="row">
+            <div class="row g-3">
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <app-navbar></app-navbar>
                 </div>
             </div>
-            <div>
-                <row class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+            <br>
+            <div class="row g-3">
+                <div class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">COURSE TITLE</label>
                     <input type="text" class="form-control">
 
-                </row>
-                <row class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                </div>
+                <div class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">COURSE DURATION</label>
                     <input type="text" class="form-control">
 
 
-                </row>
-                <row class="div col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                </div>
+                <div class="div col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
                     <label for="" class="form-label">COURSE DESCRIPTION</label>
                     <input type="text" class="form-control">
 
 
-                </row>
-                <row class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                </div>
+                <div class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">VENUE</label>
                     <input type="text" class="form-control">
 
 
-                </row>
-                <row class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                </div>
+                <div class="div col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
 
                     <label for="" class="form-label">DATE</label>
                     <input type="date" class="form-control">
 
 
-                </row>
-                <row class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                </div>
+                <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
                     <button class="btn btn-success">SUBMIT</button>
 
-                </row>
+                </div>
+                
             </div>
 
 
