--- a/src/app/viewcourse/viewcourse.component.html
+++ b/src/app/viewcourse/viewcourse.component.html
@@ -9,6 +9,9 @@
             </div>
             <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
+                <div *ngIf = "status then showData else showLoadingscreen"></div>
+                <ng-template #showData>
+
             <table class="table">
                 <thead>
                     <tr>
@@ -29,7 +32,21 @@
                     </tr>
                 </tbody>
             </table>
+        </ng-template>
+    
+        <ng-template #showLoadingscreen>
 
+           <!-- <div class="text-center">
+            <div class="spinner-border m-5" style="width:   10rem; height: 10rem;" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>-->
+            <div class="d-flex align-items-center">
+                <strong>Loading...</strong>
+                <div class="spinner-border m-5 ms-auto" role="status" aria-hidden="true"></div>
+              </div>
+
+        </ng-template>
         </div>
     </div>
 </div>
