--- a/src/app/add-course/add-course.component.html
+++ b/src/app/add-course/add-course.component.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
-                    <button class="btn btn-success" (click)="readValues()">SUBMIT</button>
+                    <button class="btn btn-success" [disabled]="status"(click)="readValues()">SUBMIT</button>
 
                 </div>
                 
